Git integrartion issue fix 11
